--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -19,3 +19,5 @@
     <p class="no-results mt-5 mb-5">No tips found matching <%= params[:q] %>... :(</p>
   <% end %>
 </div>
+
+<%= paginate @tips %>
