--- a/app/views/tips/_form.html.erb
+++ b/app/views/tips/_form.html.erb
@@ -30,7 +30,7 @@
       <%= form.submit class: 'btn btn-primary btn-block mb-2' %>
     </div>
     <div class="col-md-2">
-      <%= link_to 'Cancel', account_path, class: 'btn btn-light btn-block' %>
+      <%= link_to translate('cancel'), account_path, class: 'btn btn-light btn-block' %>
     </div>
   </div>
 <% end %>
