--- a/app/views/tips/new.html.erb
+++ b/app/views/tips/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row mt-4 mb-4">
-  <h1 class="col-12 text-center display-4">New Tip</h1>
+  <h1 class="col-12 text-center display-4"><%= translate 'tips.new.title' %></h1>
 </div>
 
 <%= render 'form', tip: @tip %>
