--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-6 offset-md-3">
-  <h1 class="text-center display-4 m-5">Sign up</h1>
+  <h1 class="text-center display-4 m-5"><%= translate 'users.new.title' %></h1>
   <%= form_for(@user) do |form| %>
     <% if @user.errors.any? %>
       <%= render partial: 'model_errors', locals: { model: @user } %>
@@ -13,7 +13,7 @@
     </div>
      <div class="form-group row">
        <div class="col-sm-10 offset-sm-2">
-         <%= form.submit 'Sign up', class: 'btn btn-primary btn-block' %>
+         <%= form.submit class: 'btn btn-primary btn-block' %>
        </div>
      </div>
   <% end %>
