--- a/app/views/application/_editable_tip_card.html.erb
+++ b/app/views/application/_editable_tip_card.html.erb
@@ -2,18 +2,18 @@
   <div class="card">
     <h4 class="card-header"><%= tip.title %></h4>
     <div class="card-body">
-      <p><%= pluralize_comments tip.comments %> on this tip.</p>
+      <p><%= pluralize_comments tip.comments %> <%= translate 'tip_card.on_this_tip' %>.</p>
       <div class="row">
         <div class="col-md-12">
-          <%= link_to 'Show more', tip_path(tip), class: 'btn btn-outline-primary btn-block', role: 'button' %>
+          <%= link_to translate('tip_card.show'), tip_path(tip), class: 'btn btn-outline-primary btn-block', role: 'button' %>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 mt-2">
-          <%= link_to 'Delete', tip_path(tip), class: 'btn btn-outline-danger btn-block', role: 'button' %>
+          <%= link_to translate('delete'), tip_path(tip), class: 'btn btn-outline-danger btn-block', role: 'button' %>
         </div>
         <div class="col-md-6 mt-2">
-          <%= link_to 'Edit', edit_tip_path(tip), class: 'btn btn-primary btn-block', role: 'button' %>
+          <%= link_to translate('edit'), edit_tip_path(tip), class: 'btn btn-primary btn-block', role: 'button' %>
         </div>
       </div>
     </div>
