--- a/app/views/application/_tip_card.html.erb
+++ b/app/views/application/_tip_card.html.erb
@@ -2,10 +2,10 @@
   <div class="card">
     <h4 class="card-header"><%= tip.title %></h4>
     <div class="card-body">
-      <p>Posted by <%= render partial: 'user_link', locals: { user: tip.user } %></p>
-      <p><%= pluralize_comments(tip.comments) %> on this tip.</p>
-      <%= link_to 'Edit tip', edit_tip_path(tip), class: 'btn btn-outline-secondary', role: 'button' %>
-      <%= link_to 'Show more', tip_path(tip), class: 'btn btn-outline-primary', role: 'button' %>
+      <p><%= translate 'tip_card.posted_by' %> <%= render partial: 'user_link', locals: { user: tip.user } %></p>
+      <p><%= pluralize_comments(tip.comments) %> <%= translate 'tip_card.on_this_tip' %>.</p>
+      <%= link_to translate('tip_card.edit'), edit_tip_path(tip), class: 'btn btn-outline-secondary', role: 'button' %>
+      <%= link_to translate('tip_card.show'), tip_path(tip), class: 'btn btn-outline-primary', role: 'button' %>
     </div>
   </div>
 </div>
