--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -3,9 +3,9 @@
 <div class="row mt-4 mb-4">
   <h1 class="col-12 text-center display-4">
   <% if params[:q].present? %>
-    Tips matching <em>"<%= params[:q] %>"</em>
+    <%= translate 'tips.index.title_2' %> <em>"<%= params[:q] %>"</em>
   <% else %>
-    Tips
+    <%= translate 'tips.index.title_1' %>
   <% end %>
   </h1>
 </div>
@@ -16,7 +16,7 @@
       <%= render partial: 'tip_card', locals: { tip: tip } %>
     <% end %>
   <% else %>
-    <p class="no-results mt-5 mb-5">No tips found matching <%= params[:q] %>... :(</p>
+    <p class="no-results mt-5 mb-5"><%= translate 'tips.index.no_match_found' %> <%= params[:q] %>... :(</p>
   <% end %>
 </div>
 
