Use locale for text in users#index view and user_card partial

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>All users</h1>
+<h1><%= translate 'users.index.title' %></h1>
 <div class="row mt-4">
   <% @users.each do |user| %>
     <div class="col-md-4">
