--- a/app/views/application/_user_card.html.erb
+++ b/app/views/application/_user_card.html.erb
@@ -2,8 +2,8 @@
   <div class="card-header d-flex justify-content-start flex-wrap">
     <h3 class="mr-3"><%= user.name %></h3>
     <div>
-      <%= link_to 'Edit', edit_user_path(user), class: 'btn btn-outline-secondary mr-3' %>
-      <%= link_to 'Delete', user_path(user), class: 'btn btn-outline-danger mr-3' %>
+      <%= link_to translate('edit'), edit_user_path(user), class: 'btn btn-outline-secondary mr-3' %>
+      <%= link_to translate('delete'), user_path(user), class: 'btn btn-outline-danger mr-3' %>
     </div>
   </div>
   <% if user.avatar_url.present? %>
@@ -13,9 +13,9 @@
   <% end %>
   <div class="card-body">
     <% if user.tips.any? %>
-      <p>Most recent tip: <%= link_to user.tips.last.title, tip_path(user.tips.last) %></p>
+      <p><%= translate 'user_card.most_recent_tip' %>: <%= link_to user.tips.last.title, tip_path(user.tips.last) %></p>
     <% end %>
-    <p>Has created <%= pluralize_tips user.tips %> and made <%= pluralize_comments user.comments %></p>
-    <p class="text-muted">Has been member of Pro Tips for <%= time_ago_in_words(user.created_at) %></p>
+    <p><%= translate 'user_card.has_created' %> <%= pluralize_tips user.tips %> <%= translate 'user_card.and_made' %> <%= pluralize_comments user.comments %></p>
+    <p class="text-muted"><%= translate 'user_card.member_since' %> <%= time_ago_in_words(user.created_at) %></p>
   </div>
 </div>
