--- a/app/views/account/edit.html.erb
+++ b/app/views/account/edit.html.erb
@@ -1,15 +1,15 @@
 <div class="mt-4 mb-4">
   <ul class="nav nav-tabs nav-justified">
     <li class="nav-item">
-      <%= link_to 'Account', '#', class: 'nav-link active' %>
+      <%= link_to translate('accounts.links.account'), '#', class: 'nav-link active' %>
     </li>
     <li class="nav-item">
-      <%= link_to 'Tips', account_tips_path, class: 'nav-link' %>
+      <%= link_to translate('accounts.links.tips'), account_tips_path, class: 'nav-link' %>
     </li>
   </ul>
 </div>
 <div class="row mt-4 mb-4">
-  <h1 class="col-12 text-center display-4">Update your account</h1>
+  <h1 class="col-12 text-center display-4"><%= translate 'accounts.edit.title' %></h1>
 </div>
 <div class="row">
   <%= form_for(@user, html: { class: 'col-lg-10 offset-lg-1' }) do |form| %>
@@ -40,10 +40,10 @@
 
     <fieldset class="form-group row d-flex flex-row-reverse">
       <div class="col-md-10">
-        <%= form.submit 'Update', class: 'btn btn-primary btn-block mb-2' %>
+        <%= form.submit class: 'btn btn-primary btn-block mb-2' %>
       </div>
       <div class="col-md-2">
-        <%= link_to 'Cancel', user_path(@user), class: 'btn btn-light btn-block' %>
+        <%= link_to translate('cancel'), user_path(@user), class: 'btn btn-light btn-block' %>
       </div>
     </fieldset>
   <% end %>
