Use locale for text in admin and regitered users headers and reorganized en.yml file

--- a/app/views/account/tips/index.html.erb
+++ b/app/views/account/tips/index.html.erb
@@ -1,18 +1,18 @@
 <div class="mt-4 mb-4">
   <ul class="nav nav-tabs nav-justified">
     <li class="nav-item">
-      <%= link_to translate('accounts.links.account'), account_path, class: 'nav-link' %>
+      <%= link_to translate('links.account'), account_path, class: 'nav-link' %>
     </li>
     <li class="nav-item">
-      <%= link_to translate('accounts.links.tips'), '#', class: 'nav-link active' %>
+      <%= link_to translate('links.tips'), '#', class: 'nav-link active' %>
     </li>
   </ul>
 </div>
 <div class="row mt-4 mb-4">
   <h1 class="col-12 text-center display-4">
-    <%= translate('accounts.tips.title') %>
+    <%= translate('account.tips.title') %>
   </h1>
-  <%= link_to translate('new_tip'), new_tip_path, class: 'btn btn-outline-primary', role: 'button' %>
+  <%= link_to translate('links.new_tip'), new_tip_path, class: 'btn btn-outline-primary', role: 'button' %>
 </div>
 <div class="row">
 <% @tips.each do |tip| %>
