--- a/app/views/application/_editable_tip_card.html.erb
+++ b/app/views/application/_editable_tip_card.html.erb
@@ -10,10 +10,10 @@
       </div>
       <div class="row">
         <div class="col-md-6 mt-2">
-          <%= link_to translate('delete'), tip_path(tip), class: 'btn btn-outline-danger btn-block', role: 'button' %>
+          <%= link_to translate('links.delete'), tip_path(tip), class: 'btn btn-outline-danger btn-block', role: 'button' %>
         </div>
         <div class="col-md-6 mt-2">
-          <%= link_to translate('edit'), edit_tip_path(tip), class: 'btn btn-primary btn-block', role: 'button' %>
+          <%= link_to translate('links.edit'), edit_tip_path(tip), class: 'btn btn-primary btn-block', role: 'button' %>
         </div>
       </div>
     </div>
