--- a/app/views/application/_registered_user_header.html.erb
+++ b/app/views/application/_registered_user_header.html.erb
@@ -1,8 +1,8 @@
 <ul class="navbar-nav">
   <li class="nav-item">
-    <%= link_to 'Account', account_path, class: 'nav-link' %>
+    <%= link_to translate('links.account'), account_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to 'Log out', '#to-be-implemented', class: 'nav-link' %>
+    <%= link_to translate('links.logout'), '#to-be-implemented', class: 'nav-link' %>
   </li>
 </ul>
