--- a/app/views/application/_user_card.html.erb
+++ b/app/views/application/_user_card.html.erb
@@ -2,8 +2,8 @@
   <div class="card-header d-flex justify-content-start flex-wrap">
     <h3 class="mr-3"><%= user.name %></h3>
     <div>
-      <%= link_to translate('edit'), edit_user_path(user), class: 'btn btn-outline-secondary mr-3' %>
-      <%= link_to translate('delete'), user_path(user), class: 'btn btn-outline-danger mr-3' %>
+      <%= link_to translate('links.edit'), edit_user_path(user), class: 'btn btn-outline-secondary mr-3' %>
+      <%= link_to translate('links.delete'), user_path(user), class: 'btn btn-outline-danger mr-3' %>
     </div>
   </div>
   <% if user.avatar_url.present? %>
