--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,7 +33,7 @@
         <%= form.submit class: 'btn btn-primary btn-block mb-2' %>
       </div>
       <div class="col-md-2">
-        <%= link_to translate('cancel'), user_path(@user), class: 'btn btn-light btn-block' %>
+        <%= link_to translate('links.cancel'), user_path(@user), class: 'btn btn-light btn-block' %>
       </div>
     </fieldset>
   <% end %>
