USe locale for text in footer

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div>
       <nav class="nav">
-        <p class="nav-link disabled pl-0">Select language:</p>
+        <p class="nav-link disabled pl-0"><%= translate 'lang_select' %>:</p>
         <a class="nav-link" href="#">En</a>
         <a class="nav-link" href="#">Fr</a>
       </nav>
