--- a/app/views/tips/show.html.erb
+++ b/app/views/tips/show.html.erb
@@ -11,27 +11,27 @@
   <div class="card-header d-flex justify-content-start">
     <h3><%= @tip.title %></h3>
     <div>
-      <%= link_to 'Edit', edit_tip_path(@tip), class: 'btn btn-outline-secondary ml-3' %>
+      <%= link_to translate('links.edit'), edit_tip_path(@tip), class: 'btn btn-outline-secondary ml-3' %>
     </div>
   </div>
 
   <div class="card-body">
     <p><%= @tip.body %></p>
-    <p class="text-muted">Created by <%= render partial: 'user_link', locals: { user: @tip.user } %> on <%= @tip.created_at.strftime('%e %b %Y at %H:%M') %></p>
+    <p class="text-muted"><%= translate 'tips.show.created_by' %> <%= render partial: 'user_link', locals: { user: @tip.user } %> <%= translate 'tips.show.on' %> <%= @tip.created_at.strftime('%e %b %Y at %H:%M') %></p>
   </div>
 
   <div class="card-body">
-    <h3>Comments</h3>
+    <h3><%= translate 'comments.title' %></h3>
     <div class="m-3">
       <% @tip.comments.order(created_at: :asc).each do |comment| %>
         <blockquote class="blockquote">
           <p class="mb-0"><%= comment.body %></p>
           <footer class="blockquote-footer">
-            Added by <%= render partial: 'user_link', locals: { user: comment.user } %> on <%= comment.created_at %></footer>
+            <%= translate 'comments.added_by' %> <%= render partial: 'user_link', locals: { user: comment.user } %> on <%= comment.created_at %></footer>
         </blockquote>
       <% end %>
     </div>
-    <p class="text-muted">Add your own comment</p>
+    <p class="text-muted"><%= translate 'comments.add_comment' %></p>
     <%=
       # Notice how #build is used here to instantiate a new empty Comment to be
       # used in the form.  #build is a convenient way to create an empty
@@ -43,7 +43,7 @@
         <%= form.text_area(:body, class: 'form-control mb-2', rows: 5) %>
       </fieldset>
       <fieldset class="d-flex justify-content-end">
-        <%= form.submit class: 'btn btn-primary' %>
+        <%= form.submit translate('comments.post'), class: 'btn btn-primary' %>
       </fieldset>
     <% end %>
   </div>
