--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,12 @@
       </div>
     </div>
      <div class="form-group row">
+      <%= form.label :password, class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.password_field :password, class: 'form-control' %>
+      </div>
+    </div>
+     <div class="form-group row">
        <div class="col-sm-10 offset-sm-2">
          <%= form.submit class: 'btn btn-primary btn-block' %>
        </div>
