Implement log in

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-<p></p>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 
 <div class="jumbotron">
   <h1 class="display-4"><%= translate 'home.title' %></h1>
