--- a/app/views/application/_anonymous_user_header.html.erb
+++ b/app/views/application/_anonymous_user_header.html.erb
@@ -1,8 +1,8 @@
 <ul class="navbar-nav">
   <li class="nav-item">
-    <%= link_to translate('links.signup'), new_user_path, class: 'nav-link' %>
+    <%= link_to translate('links.signup'), signup_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to translate('links.login'), new_session_path, class: 'nav-link' %>
+    <%= link_to translate('links.login'), login_path, class: 'nav-link' %>
   </li>
 </ul>
