--- a/app/views/application/_registered_user_header.html.erb
+++ b/app/views/application/_registered_user_header.html.erb
@@ -3,6 +3,6 @@
     <%= link_to translate('links.account'), account_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to translate('links.logout'), '#to-be-implemented', class: 'nav-link' %>
+    <%= link_to translate('links.logout'), logout_path, method: :delete, class: 'nav-link' %>
   </li>
 </ul>
