--- a/app/views/application/_user_card.html.erb
+++ b/app/views/application/_user_card.html.erb
@@ -1,10 +1,12 @@
 <div class="card">
   <div class="card-header d-flex justify-content-start flex-wrap">
     <h3 class="mr-3"><%= user.name %></h3>
-    <div>
-      <%= link_to translate('links.edit'), edit_user_path(user), class: 'btn btn-outline-secondary mr-3' %>
-      <%= link_to translate('links.delete'), user_path(user), class: 'btn btn-outline-danger mr-3' %>
-    </div>
+    <% if logged_in? && can_edit?(user) %>
+      <div>
+        <%= link_to translate('links.edit'), edit_user_path(user), class: 'btn btn-outline-secondary mr-3' %>
+        <%= link_to translate('links.delete'), user_path(user), class: 'btn btn-outline-danger mr-3' %>
+      </div>
+    <% end %>
   </div>
   <% if user.avatar_url.present? %>
     <%= image_tag user.avatar_url, class: 'card-img-top', alt: "Avatar for #{user.name}" %>
