--- a/app/views/application/_tip_card.html.erb
+++ b/app/views/application/_tip_card.html.erb
@@ -2,12 +2,12 @@
   <div class="card">
     <h4 class="card-header"><%= tip.title %></h4>
     <div class="card-body">
-      <p><%= translate 'tip_card.posted_by' %> <%= render partial: 'user_link', locals: { user: tip.user } %></p>
-      <p><%= pluralize_comments(tip.comments) %> <%= translate 'tip_card.on_this_tip' %>.</p>
+      <p><%= t('tip_card.posted_by') %> <%= render partial: 'user_link', locals: { user: tip.user } %></p>
+      <p><%= pluralize_comments(tip.comments) %> <%= t('tip_card.on_this_tip') %>.</p>
       <% if logged_in? && can_edit?(tip) %>
-        <%= link_to translate('tip_card.edit'), edit_tip_path(tip), class: 'btn btn-outline-secondary', role: 'button' %>
+        <%= link_to t('tip_card.edit'), edit_tip_path(tip), class: 'btn btn-outline-secondary', role: 'button' %>
       <% end %>
-      <%= link_to translate('tip_card.show'), tip_path(tip), class: 'btn btn-outline-primary', role: 'button' %>
+      <%= link_to t('tip_card.show'), tip_path(tip), class: 'btn btn-outline-primary', role: 'button' %>
     </div>
   </div>
 </div>
