--- a/app/views/tips/_form.html.erb
+++ b/app/views/tips/_form.html.erb
@@ -23,7 +23,7 @@
       <%= form.submit class: 'btn btn-primary btn-block mb-2' %>
     </div>
     <div class="col-md-2">
-      <%= link_to translate('links.cancel'), account_path, class: 'btn btn-light btn-block' %>
+      <%= link_to t('links.cancel'), account_path, class: 'btn btn-light btn-block' %>
     </div>
   </div>
 <% end %>
