--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-6 offset-md-3">
-  <h1 class="text-center display-4 m-5"><%= translate 'users.new.title' %></h1>
+  <h1 class="text-center display-4 m-5"><%= t('.title') %></h1>
   <%= form_for(@user) do |form| %>
     <% if @user.errors.any? %>
       <%= render partial: 'model_errors', locals: { model: @user } %>
