--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,25 +3,25 @@
 <% end %>
 
 <div class="jumbotron">
-  <h1 class="display-4"><%= translate 'home.title' %></h1>
+  <h1 class="display-4"><%= t('.title') %></h1>
   <hr class="my-4">
-  <p class="lead"><%= translate 'home.subtitle' %></p>
+  <p class="lead"><%= t('.subtitle') %></p>
   <p class="lead">
     <%= form_tag tips_path, method: :get do %>
       <div class="form-row">
         <div class="col-sm-9">
-          <%= label_tag :q, translate('search.label'), class: 'sr-only' %>
-          <%= text_field_tag :q, params[:q], class: 'form-control', placeholder: translate('search.placeholder') %>
+          <%= label_tag :q, t('search.label'), class: 'sr-only' %>
+          <%= text_field_tag :q, params[:q], class: 'form-control', placeholder: t('search.placeholder') %>
         </div>
         <div class="col-sm-2">
-          <%= submit_tag translate('search.button'), class: 'btn btn-primary' %>
+          <%= submit_tag t('search.button'), class: 'btn btn-primary' %>
         </div>
       </div>
     <% end %>
   </p>
 </div>
 
-<h3><%= translate 'home.secondtitle' %></h3>
+<h3><%= t('.secondtitle') %></h3>
 
 <div class="row">
 <% @tips.each do |tip| %>
