--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row mt-4 mb-4">
-  <h1 class="col-12 text-center display-4"><%= translate 'users.edit.title' %></h1>
+  <h1 class="col-12 text-center display-4"><%= t('.title') %></h1>
 </div>
 <div class="row">
   <%= form_for(@user, html: { class: 'col-lg-10 offset-lg-1' }) do |form| %>
@@ -33,7 +33,7 @@
         <%= form.submit class: 'btn btn-primary btn-block mb-2' %>
       </div>
       <div class="col-md-2">
-        <%= link_to translate('links.cancel'), user_path(@user), class: 'btn btn-light btn-block' %>
+        <%= link_to t('links.cancel'), user_path(@user), class: 'btn btn-light btn-block' %>
       </div>
     </fieldset>
   <% end %>
