--- a/app/views/account/edit.html.erb
+++ b/app/views/account/edit.html.erb
@@ -12,9 +12,12 @@
   <h1 class="col-12 text-center display-4"><%= t('.title') %></h1>
 </div>
 <div class="row">
-  <%= form_for(@user, html: { class: 'col-lg-10 offset-lg-1' }) do |form| %>
-    <% if @user.errors.any? %>
-      <%= render partial: 'model_errors', locals: { model: @user } %>
+  <%= form_for(current_user, url: account_path, html: { class: 'col-lg-10 offset-lg-1' }) do |form| %>
+    <% if current_user.errors.any? %>
+      <%= render partial: 'model_errors', locals: { model: current_user } %>
+    <% end %>
+    <% if notice %>
+      <p id="notice"><%= notice %></p>
     <% end %>
 
     <div class="form-group row">
@@ -43,7 +46,7 @@
         <%= form.submit class: 'btn btn-primary btn-block mb-2' %>
       </div>
       <div class="col-md-2">
-        <%= link_to t('links.cancel'), user_path(@user), class: 'btn btn-light btn-block' %>
+        <%= link_to t('links.cancel'), user_path(current_user), class: 'btn btn-light btn-block' %>
       </div>
     </fieldset>
   <% end %>
