--- a/app/views/application/_user_link.html.erb
+++ b/app/views/application/_user_link.html.erb
@@ -1,3 +1,3 @@
 <%= link_to user_path(user) do %>
-  <%= image_tag default_avatar(user), class: 'avatar-xs' %><%= user.name %>
+  <%= image_tag user.avatar_url, class: 'avatar-xs' %><%= user.name %>
 <% end %>
