--- a/app/views/application/_user_card.html.erb
+++ b/app/views/application/_user_card.html.erb
@@ -1,10 +1,10 @@
-<div class="card">
+<div id="user-<%= user.id %>" class="card">
   <div class="card-header d-flex justify-content-start flex-wrap">
     <h3 class="mr-3"><%= user.name %></h3>
     <% if logged_in? && can_edit?(user) %>
       <div>
         <%= link_to t('links.edit'), edit_user_path(user), class: 'btn btn-outline-secondary mr-3' %>
-        <%= link_to t('links.delete'), user_path(user), class: 'btn btn-outline-danger mr-3' %>
+        <%= link_to t('links.delete'), user_path(user), class: 'btn btn-outline-danger mr-3', method: :delete, remote: is_this_users_index? %>
       </div>
     <% end %>
   </div>
