--- a/app/views/application/_editable_tip_card.html.erb
+++ b/app/views/application/_editable_tip_card.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6">
+<div id="tip-<%= tip.id %>" class="col-md-6">
   <div class="card">
     <h4 class="card-header"><%= tip.title %></h4>
     <div class="card-body">
@@ -10,7 +10,7 @@
       </div>
       <div class="row">
         <div class="col-md-6 mt-2">
-          <%= link_to t('links.delete'), tip_path(tip), class: 'btn btn-outline-danger btn-block', role: 'button' %>
+          <%= link_to t('links.delete'), tip_path(tip), class: 'btn btn-outline-danger btn-block', role: 'button', method: :delete, remote: true %>
         </div>
         <div class="col-md-6 mt-2">
           <%= link_to t('links.edit'), edit_tip_path(tip), class: 'btn btn-primary btn-block', role: 'button' %>
