Put tip destroy.js logic in tips.js

--- a/app/views/tips/destroy.js.erb
+++ b/app/views/tips/destroy.js.erb
@@ -1,4 +1,1 @@
-document.getElementById('tip-<%= @tip.id %>').remove();
-
-const notice = document.createTextNode('Tip was successfully destroyed.');
-document.getElementById('notice').appendChild(notice);
+Tip.removeFromPage('<%= @tip.id %>');
