--- a/app/views/users/destroy.js.erb
+++ b/app/views/users/destroy.js.erb
@@ -1,4 +1,1 @@
-document.getElementById('user-<%= @user.id %>').parentElement.remove();
-
-const notice = document.createTextNode('User was successfully destroyed.');
-document.getElementById('notice').appendChild(notice);
+User.removeFromPage('<%= @user.id %>');
