Add translation for error, alert and notice messages

--- a/app/views/tips/_form.html.erb
+++ b/app/views/tips/_form.html.erb
@@ -7,7 +7,7 @@
     <%= form.label :title, class: 'col-md-2 col-form-label' %>
     <div class="col-md-10">
       <%= form.text_field :title, class: 'form-control' %>
-      <small class="form-text text-muted">Maximum 100 characters</small>
+      <small class="form-text text-muted"><%= t('tips.title_field_info') %></small>
     </div>
   </fieldset>
 
