--- a/app/views/application/_model_errors.html.erb
+++ b/app/views/application/_model_errors.html.erb
@@ -1,6 +1,6 @@
 <% if model.errors.any? %>
   <div class="alert alert-danger" role="alert">
-    <p><%= pluralize(model.errors.count, "error") %> prohibited this from being saved:</p>
+    <p><%= pluralize(model.errors.count, t('errors.error'), locale: :en) %> <%= t('errors.header') %></p>
 
     <ul>
     <% model.errors.full_messages.each do |message| %>
