--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
+<% if alert || notice %>
+  <%= render partial: 'alert_and_notice', locals: { notice: notice, alert: alert } %>
+<% end %>
+
 <div class="row mt-4">
   <div class="col-sm-4 offset-sm-4">
-    <p id="notice"><%= notice %></p>
-
     <%= render partial: 'user_card', locals: { user: @user } %>
   </div>
 </div>
