--- a/app/views/account/edit.html.erb
+++ b/app/views/account/edit.html.erb
@@ -1,3 +1,7 @@
+<% if alert || notice %>
+  <%= render partial: 'alert_and_notice', locals: { notice: notice, alert: alert } %>
+<% end %>
+
 <div class="mt-4 mb-4">
   <ul class="nav nav-tabs nav-justified">
     <li class="nav-item">
@@ -18,9 +22,6 @@
   <%= form_for(current_user, url: account_path, html: { class: 'col-lg-10 offset-lg-1' }) do |form| %>
     <% if current_user.errors.any? %>
       <%= render partial: 'model_errors', locals: { model: current_user } %>
-    <% end %>
-    <% if notice %>
-      <p id="notice"><%= notice %></p>
     <% end %>
 
     <div class="form-group row">
