--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<% if notice %>
-  <p id="notice"><%= notice %></p>
+<% if alert || notice %>
+  <%= render partial: 'alert_and_notice', locals: { notice: notice, alert: alert } %>
 <% end %>
 
 <div class="jumbotron">
