--- a/app/views/tips/show.html.erb
+++ b/app/views/tips/show.html.erb
@@ -1,10 +1,5 @@
-<% if notice %>
-<p id="notice"><%= notice %></p>
-<% end %>
-<% if alert %>
-<div id="error_explanation">
-  <p><%= alert %></p>
-</div>
+<% if alert || notice %>
+  <%= render partial: 'alert_and_notice', locals: { notice: notice, alert: alert } %>
 <% end %>
 
 <div class="card mt-4">
