--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -7,6 +7,22 @@
   }
 }
 
+.alert_and_notice {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  padding: 1.5rem 5rem;
+
+  .close {
+    position: static;
+    margin-left: auto;
+  }
+}
+
 .card {
   margin-bottom: 2vw;
 }
