--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -3,14 +3,14 @@
     let comment = {};
   }
   comment = {
-    body: '<%= @comment.body %>',
+    body: `<%= raw(@comment.body) %>`,
     user: {
       name: '<%= @comment.user.name %>',
       path: '<%= user_path(@comment.user) %>',
       avatar_url: '<%= @comment.user.avatar_url %>',
     },
     text1: '<%= t('comments.added_by') %> ',
-    text2: ' <%= t('comments.date', time: time_ago_in_words(@comment.created_at) ) %>'
+    text2: ` <%= raw(t('comments.date', time: time_ago_in_words(@comment.created_at) )) %>`
   };
 
   Comment.render(comment);
