--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -18,6 +18,6 @@
 
 <% if flash.any? %>
   <% flash.each do |name, message| %>
-    Alert.render('<%= message %>', '<%= name %>');
+    Alert.render('<%= message %>', '<%= name %>', '<%= alert_id %>');
   <% end %>
 <% end %>
