--- a/app/views/users/destroy.js.erb
+++ b/app/views/users/destroy.js.erb
@@ -2,6 +2,6 @@ User.removeFromPage('<%= @user.id %>');
 
 <% if flash.any? %>
   <% flash.each do |name, message| %>
-    Alert.render('<%= message %>', '<%= name %>');
+    Alert.render('<%= message %>', '<%= name %>', '<%= alert_id %>');
   <% end %>
 <% end %>
