--- a/app/views/account/edit.html.erb
+++ b/app/views/account/edit.html.erb
@@ -10,6 +10,9 @@
     <li class="nav-item">
       <%= link_to t('links.tips'), account_tips_path, class: 'nav-link' %>
     </li>
+    <li class="nav-item">
+      <%= link_to t('links.favourites'), account_favourites_path, class: 'nav-link' %>
+    </li>
   </ul>
 </div>
 <div class="row mt-4 mb-4">
