--- a/app/views/account/favourites/index.html.erb
+++ b/app/views/account/favourites/index.html.erb
@@ -4,10 +4,10 @@
       <%= link_to t('links.account'), account_path, class: 'nav-link' %>
     </li>
     <li class="nav-item">
-      <%= link_to t('links.tips'), '#', class: 'nav-link active' %>
+      <%= link_to t('links.tips'), account_tips_path, class: 'nav-link' %>
     </li>
     <li class="nav-item">
-      <%= link_to t('links.favourites'), account_favourites_path, class: 'nav-link' %>
+      <%= link_to t('links.favourites'), '#', class: 'nav-link active' %>
     </li>
   </ul>
 </div>
@@ -15,15 +15,14 @@
   <h1 class="col-12 text-center display-4">
     <%= t('.title') %>
   </h1>
-  <%= link_to t('links.new_tip'), new_tip_path, class: 'btn btn-outline-primary', role: 'button' %>
 </div>
 <div id="tipsList" class="row">
 <% if @tips.any? %>
   <% @tips.each do |tip| %>
-    <%= render partial: 'editable_tip_card', locals: { tip: tip } %>
+    <%= render partial: 'tip_card', locals: { tip: tip } %>
   <% end %>
 <% else %>
-  <p class="no-results mt-5 mb-5"><%= t('.no_tips') %></p>
+  <p class="no-results mt-5 mb-5"><%= t('.no_favourites') %></p>
 <% end %>
 </div>
 <%= paginate @tips %>
