--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
     </div>
 
     <%= render partial: 'footer' %>
+    <script>Favourite.makeRemoveLinksTextInteractive();</script>
   </body>
 </html>
