--- a/app/views/account/favourites/index.html.erb
+++ b/app/views/account/favourites/index.html.erb
@@ -12,7 +12,7 @@
   </ul>
 </div>
 <div class="row mt-4 mb-4">
-  <h1 class="col-12 text-center display-4">
+  <h1 id="thisIsAccountFavouritesIndex" class="col-12 text-center display-4">
     <%= t('.title') %>
   </h1>
 </div>
