--- a/app/views/application/_tip_card.html.erb
+++ b/app/views/application/_tip_card.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6">
+<div id="tip-<%= tip.id %>" class="col-md-6">
   <div class="card">
     <h4 class="card-header"><%= tip.title %></h4>
     <div class="card-body">
